--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
-  <body><div id="main"></div></body>
+  <body>
+    <div id="main"></div>
+  </body>
 
    <script type="text/javascript" src="elm.js" charset="utf-8"></script>
 	<script type="text/javascript" src="/_reactor/debug.js"></script>
